crates/rattler_config/tests/snapshots/compat__parse__deprecated-and-unknown.toml.snap
---
source: crates/rattler_config/tests/compat.rs
expression: "(unused, normalized(config))"
---
(
    {
        "change-ps1",
        "definitely-a-typo",
        "pinning-strategy",
        "repodata-config.disable-jlap",
        "repodata-config.https://prefix.dev.disable-jlap",
    },
    ConfigBase {
        common: CommonConfig {
            default_channels: Some(
                [
                    Name(
                        "conda-forge",
                    ),
                ],
            ),
            authentication_override_file: None,
            tls_no_verify: None,
            tls_root_certs: Some(
                System,
            ),
            mirrors: {},
            build: BuildConfig {
                package_format: None,
            },
            channel_config: ChannelConfig {
                channel_alias: Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "conda.anaconda.org",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
                root_dir: "<normalized>",
            },
            repodata_config: RepodataConfig {
                default: RepodataChannelConfig {
                    disable_bzip2: Some(
                        true,
                    ),
                    disable_zstd: None,
                    disable_sharded: None,
                },
                per_channel: {
                    Url {
                        scheme: "https",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: Some(
                            Domain(
                                "prefix.dev",
                            ),
                        ),
                        port: None,
                        path: "/",
                        query: None,
                        fragment: None,
                    }: RepodataChannelConfig {
                        disable_bzip2: None,
                        disable_zstd: None,
                        disable_sharded: None,
                    },
                },
            },
            concurrency: ConcurrencyConfig {
                solves: 0,
                downloads: 50,
            },
            proxy_config: ProxyConfig {
                https: None,
                http: None,
                non_proxy_hosts: [],
            },
            s3_options: S3OptionsMap(
                {},
            ),
            index_config: IndexConfig {
                default: IndexChannelConfig {
                    write_zst: None,
                    write_shards: None,
                    repodata_revisions: None,
                    package_revision_assignment: None,
                    base_url: None,
                    notices: None,
                    channel_relations: None,
                    virtual_package_detectors: None,
                },
                per_channel: {},
            },
            run_post_link_scripts: None,
            allow_symbolic_links: None,
            allow_hard_links: None,
            allow_ref_links: None,
            virtual_package_detectors: VirtualPackageDetectorsConfig {
                timeout_seconds: None,
                consent: {},
            },
        },
        extensions: NoExtension,
        loaded_from: [],
    },
)
